--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular-eslint/eslint-plugin-template": "^15.0.0",
     "@angular-eslint/schematics": "^15.2.1",
     "@angular-eslint/template-parser": "^15.2.1",
-    "@angular/cli": "^15.2.5",
+    "@angular/cli": "15.2.6",
     "@angular/compiler": "^15.2.6",
     "@angular/compiler-cli": "^15.2.6",
     "@angular/language-service": "^15.2.6",
