--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.7.2",
-    "firebase": "9.9.1",
+    "firebase": "^9.9.1",
     "ionicons": "^6.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
