--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
         "appspot",
+        "desea",
+        "enablelista",
         "firebaseapp",
+        "Guardado",
         "GYSS",
         "homeapp",
+        "intente",
         "Mdyt",
         "Propiedad",
         "Vsglp"
