--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Guardado",
         "GYSS",
         "homeapp",
+        "ingresar",
         "intente",
         "Mdyt",
         "Propiedad",
