--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^15.2.6",
     "@angular/platform-browser-dynamic": "^15.2.6",
     "@angular/router": "^15.2.6",
+    "@capacitor/android": "^4.7.1",
     "@capacitor/core": "4.7.1",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.7.2",
+    "cordova-plugin-file": "^7.0.0",
     "firebase": "^9.9.1",
     "ionicons": "^6.1.3",
     "rxjs": "~7.5.0",
