--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^6.7.2",
     "firebase": "^9.9.1",
     "ionicons": "^6.1.3",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.8"
@@ -44,6 +45,7 @@
     "@angular/language-service": "^15.2.6",
     "@capacitor/cli": "4.7.1",
     "@ionic/angular-toolkit": "^8.1.0",
+    "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
