--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
-    "recommendations": [
-      "ionic.ionic",
-      "ms-ceintl.vscode-language-pack-es"
-    ]
+  "recommendations": [
+    "ms-ceintl.vscode-language-pack-es",
+    "Webnative.webnative"
+  ]
 }
